--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "version": "1.0.0",
     "icons": {"128": "images/icon_128.png"},
     "action": {
-        "default_icon": "images/icon_16.png",
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": "images/icon_16.png"
     },
     "permissions": ["activeTab"]
 }
