--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,8 @@
         "48": "/images/icon_48.png",
         "128": "/images/icon_128.png" 
     },
-    "permissions": ["activeTab"]
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": ["storage"]
 }
